--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Map/01.01
 GameDefaultMap=/Game/Map/01.01
-GlobalDefaultGameMode="/Script/ScapeBuilding.ScapeBuildingGameMode"
+GlobalDefaultGameMode=/Game/BluePrinctGameModeBase.BluePrinctGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
